--- a/src/app/features/employees/pages/employee-page/employee-page.component.html
+++ b/src/app/features/employees/pages/employee-page/employee-page.component.html
@@ -1,4 +1,4 @@
 <div class="employee-page">
-  <h1 class="h1">Nuevo empleado</h1>
+  <app-title title="Agregar nuevo empleado"/>
   <app-employee-form />
 </div>
