--- a/src/app/features/employees/components/employee-form/employee-form.component.scss
+++ b/src/app/features/employees/components/employee-form/employee-form.component.scss
@@ -1,3 +1,26 @@
 :host {
   display: block;
 }
+
+form{
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.row{
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+  justify-content: space-between;
+}
+
+.toogle-container{
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+
+  & p{
+    margin: 0 !important;
+  }
+}
