--- a/src/app/features/employees/pages/employee-page/employee-page.component.scss
+++ b/src/app/features/employees/pages/employee-page/employee-page.component.scss
@@ -1,7 +1,12 @@
 :host {
   display: block;
+  flex: 1;
 }
 
+.form{
+  display: flex;
+  align-items: center;
+}
 .employee-page{
   padding: 16px;
 }
