--- a/src/app/features/employees/pages/employee-page/employee-page.component.html
+++ b/src/app/features/employees/pages/employee-page/employee-page.component.html
@@ -1,4 +1,6 @@
 <div class="employee-page">
   <app-title title="Agregar nuevo empleado"/>
-  <app-employee-form />
+  <div class="form">
+    <app-employee-form />
+  </div>
 </div>
