--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -3,9 +3,10 @@
 }
 
 .sidebar{
-  width: 150px;
+  width: 200px;
   height: 100%;
-  background-color: red;
+  background-color: rgb(76, 83, 87);
+
   &__list{
     background-color: aqua;
    &-item{
