--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,6 +1,12 @@
 <div class="sidebar">
   <p class="sidebar__title">Empleados</p>
   <div class="sidebar__list">
+    <!-- <div class="sidebar__list-item">
+      <div [routerLink]="['']" routerLinkActive="active" class="route-container">
+        <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="list"></mat-icon>
+        Dashboard
+      </div>
+    </div> -->
     <div class="sidebar__list-item">
       <div [routerLink]="['/add-employee']" routerLinkActive="active" class="route-container">
         <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="person"></mat-icon>
