--- a/src/app/features/employees/pages/employee-list/employee-list.component.html
+++ b/src/app/features/employees/pages/employee-list/employee-list.component.html
@@ -70,12 +70,14 @@
     }
   </app-white-card>
 </div>
-<mat-paginator
-  [length]="totalRecords"
-  [pageSize]="pageSize"
-  [pageSizeOptions]="[5, 10, 20]"
-  aria-label="Selecciona la pagina"
-  (page)="handlePageEvent($event)">
-</mat-paginator>
+@if(employess.length>=1){
+  <mat-paginator
+    [length]="totalRecords"
+    [pageSize]="pageSize"
+    [pageSizeOptions]="[5, 10, 20]"
+    aria-label="Selecciona la pagina"
+    (page)="handlePageEvent($event)">
+  </mat-paginator>
+}
 
 <!-- <pre>{{form.value|json}}</pre> -->
