[fix] box shadows para las cards

--- a/src/app/shared/white-card/white-card.component.scss
+++ b/src/app/shared/white-card/white-card.component.scss
@@ -4,5 +4,5 @@
  .white-card{
   padding: 16px;
   border-radius: 10px;
-  border: solid 1px lighten($color: gray, $amount: 8);
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
  }
