--- a/src/app/features/employees/components/employee-form/employee-form.component.scss
+++ b/src/app/features/employees/components/employee-form/employee-form.component.scss
@@ -26,3 +26,12 @@ form{
     margin: 0 !important;
   }
 }
+
+.button-container{
+  display: flex;
+  justify-content: flex-end;
+
+  & button{
+    width: 100px;
+  }
+}
