--- a/src/app/features/employees/pages/employee-list/employee-list.component.html
+++ b/src/app/features/employees/pages/employee-list/employee-list.component.html
@@ -14,12 +14,11 @@
       <table>
         <thead>
           <tr>
-            <th scope="col">id</th>
-            <th scope="col">Nombre</th>
-            <th scope="col">Edad</th>
-            <th scope="col">Editar</th>
-            <th scope="col">Eliminar</th>
-            <th scope="col">Cambiar estatus</th>
+            <th scope="col" class="text-start">id</th>
+            <th scope="col" class="text-start">Nombre</th>
+            <th scope="col" class="text-start">Edad</th>
+            <th scope="col" colspan="2">Acciones</th>
+            <th scope="col" class="text-start">Estado</th>
           </tr>
         </thead>
         <tbody formArrayName="employees">
