[fix] se corrige tenxto

--- a/src/app/features/employees/pages/employee-page/employee-page.component.html
+++ b/src/app/features/employees/pages/employee-page/employee-page.component.html
@@ -1,5 +1,5 @@
 <div class="employee-page">
-  <app-title title="Agregar nuevo empleado"/>
+  <app-title title="Agregar empleado"/>
   <div class="form">
     <app-employee-form />
   </div>
